--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -9,3 +9,11 @@ appTitle=Employees Report
 appDescription=Employees Report Application
 #XTIT: Main view title
 title=Employees Report
+
+# Label
+labelEmployee = Employee
+labelCountry = Country
+countryUS = United States
+countryBR = Brazil
+countryES = Spain
+countryPT = Portugal
