--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,4 +12,7 @@ title=Employees Report
 
 # Label
 labelEmployee = Employee
+labelId = ID
+labelName = Name
 labelCountry = Country
+labelCity = City
