Implementação dos filtros

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -16,3 +16,5 @@ labelId = ID
 labelName = Name
 labelCountry = Country
 labelCity = City
+LabelBtnFilter = Filter
+LabelBtnClearFilter = Clear Filter
