Implementação de modelo e filtros

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -12,8 +12,9 @@ title=Employees Report
 
 # Label
 labelEmployee = Employee
+labelId = ID
+labelName = Name
 labelCountry = Country
-countryUS = United States
-countryBR = Brazil
-countryES = Spain
-countryPT = Portugal
+labelCity = City
+LabelBtnFilter = Filter
+LabelBtnClearFilter = Clear Filter
