Criação da view ListTypes

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -18,3 +18,11 @@ labelCountry = Country
 labelCity = City
 LabelBtnFilter = Filter
 LabelBtnClearFilter = Clear Filter
+
+# List
+listTitle = List Types
+objectList = Object List
+standardList = Standard List
+inputList = Input List
+notificationList = Notification List
+customList = Custom List
