Tipos de seleção de uma lista

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -26,3 +26,12 @@ standardList = Standard List
 inputList = Input List
 notificationList = Notification List
 customList = Custom List
+
+# Standard List Mode Selections
+selectionMode = Selections Mode List
+none = None
+multiSelect = MultiSelect
+singleSelect = SingleSelect
+singleSelectLeft = SingleSelectLeft
+singleSelectMaster = SingleSelectMaster
+delete = Delete
