Obtendo seleções de uma lista

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -26,6 +26,8 @@ standardList = Standard List
 inputList = Input List
 notificationList = Notification List
 customList = Custom List
+btnSelectedItems = Show Selected Items
+noSelection = No Items Selected
 
 # Standard List Mode Selections
 selectionMode = Selections Mode List
