--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -26,7 +26,7 @@ standardList = Standard List
 inputList = Input List
 notificationList = Notification List
 customList = Custom List
-btnSelectedItems = Show Selected Items
+btnSelectedItems = Show Selected Items ({0})
 noSelection = No Items Selected
 
 # Standard List Mode Selections
