Removendo ítens e refatoração do contador de seleção

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -28,6 +28,7 @@ notificationList = Notification List
 customList = Custom List
 btnSelectedItems = Show Selected Items ({0})
 noSelection = No Items Selected
+deleteSelection = Delete Selected Items
 
 # Standard List Mode Selections
 selectionMode = Selections Mode List
@@ -37,3 +38,5 @@ singleSelect = SingleSelect
 singleSelectLeft = SingleSelectLeft
 singleSelectMaster = SingleSelectMaster
 delete = Delete
+removed = Removed Items
+selected = Selected Items
