Ocultando colunas utilizando modelos

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -18,3 +18,7 @@ labelCountry = Country
 labelCity = City
 LabelBtnFilter = Filter
 LabelBtnClearFilter = Clear Filter
+
+# Button
+btnShowCity = Show City
+btnHideCity = Hide City
