--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -22,3 +22,8 @@ LabelBtnClearFilter = Clear Filter
 # Button
 btnShowCity = Show City
 btnHideCity = Hide City
+
+# Dinamic Table
+orderID = Order ID
+freight = Freight
+shipAddress = Ship Address
