Utilizando ícones para exibir detalhes

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -18,6 +18,7 @@ labelCountry = Country
 labelCity = City
 LabelBtnFilter = Filter
 LabelBtnClearFilter = Clear Filter
+labelShowDetails = Show Details
 
 # Button
 btnShowCity = Show City
