Criação do Diálogo

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -28,3 +28,6 @@ btnHideCity = Hide City
 orderID = Order ID
 freight = Freight
 shipAddress = Ship Address
+
+# Orders Dialog
+orders = Orders List
