Tipos de Layout

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -32,3 +32,7 @@ shipAddress = Ship Address
 # Orders Dialog
 orders = Orders List
 close = close
+
+# Employees Details
+employeesDetailTitle = Employees Detail
+layout = Layout
