--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -36,3 +36,8 @@ close = close
 # Employees Details
 employeesDetailTitle = Employees Detail
 layout = Layout
+employeeId = Employee ID
+titleEmployee = Title
+countryCode = Country
+city = City
+postalCode = Postal Code
