Aplicando Layout com FlexBox

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -32,3 +32,12 @@ shipAddress = Ship Address
 # Orders Dialog
 orders = Orders List
 close = close
+
+# Employees Details
+employeesDetailTitle = Employees Detail
+layout = Layout
+employeeId = Employee ID
+titleEmployee = Title
+countryCode = Country
+city = City
+postalCode = Postal Code
