--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -41,3 +41,9 @@ titleEmployee = Title
 countryCode = Country
 city = City
 postalCode = Postal Code
+
+#Incidence
+incidenceTitle= Incidence
+europe = Europe
+nothAmerica = North America
+createIncidence = Create Incidence
