Binding Expression mais complexas

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -47,3 +47,9 @@ incidenceTitle= Incidence
 europe = Europe
 nothAmerica = North America
 createIncidence = Create Incidence
+incidanceDate = Date
+incidenceReason = Reason
+incidenceType = Type
+incidenceCorrect = Correct
+incidencePending = Pending
+incidenceError = Error
