Utilizando formatação personalizada para datas

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -53,3 +53,8 @@ incidenceType = Type
 incidenceCorrect = Correct
 incidencePending = Pending
 incidenceError = Error
+IncidenceTomorrow =  Tomorrow
+incidenceToday = Today
+incidenceYesterday = Yesterday
+incidenteInXDay = in {0} days
+incidenteXDayAgo = {0} days ago
