Formatação personalizada e trabalhando com fragmentos

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -41,3 +41,20 @@ titleEmployee = Title
 countryCode = Country
 city = City
 postalCode = Postal Code
+
+#Incidence
+incidenceTitle= Incidence
+europe = Europe
+nothAmerica = North America
+createIncidence = Create Incidence
+incidanceDate = Date
+incidenceReason = Reason
+incidenceType = Type
+incidenceCorrect = Correct
+incidencePending = Pending
+incidenceError = Error
+IncidenceTomorrow =  Tomorrow
+incidenceToday = Today
+incidenceYesterday = Yesterday
+incidenteInXDay = in {0} days
+incidenteXDayAgo = {0} days ago
