--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -58,3 +58,8 @@ incidenceToday = Today
 incidenceYesterday = Yesterday
 incidenteInXDay = in {0} days
 incidenteXDayAgo = {0} days ago
+
+# CRUD
+oDataOK = Data saved successfully
+oDataERROR = Data not saved. ERRO!
+oDataNoChanges = No changes were made!
