--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -63,3 +63,5 @@ incidenteXDayAgo = {0} days ago
 oDataOK = Data saved successfully
 oDataERROR = Data not saved. ERRO!
 oDataNoChanges = No changes were made!
+oDataUpdateOK = Data Updated!
+oDataUpdateERROR = Update ERROR!
