--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -65,3 +65,5 @@ oDataERROR = Data not saved. ERRO!
 oDataNoChanges = No changes were made!
 oDataUpdateOK = Data Updated!
 oDataUpdateERROR = Update ERROR!
+oDataDeleteOK = Incidence {0} deleted.
+oDataDeleteERROR = error when deleting incident.
