--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -67,3 +67,6 @@ oDataUpdateOK = Data Updated!
 oDataUpdateERROR = Update ERROR!
 oDataDeleteOK = Incidence {0} deleted.
 oDataDeleteERROR = error when deleting incident.
+
+# Validade Data
+errorCreationDateValue = Invalid date!
