Mensagem de confirmação

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -70,3 +70,4 @@ oDataDeleteERROR = error when deleting incident.
 
 # Validade Data
 errorCreationDateValue = Invalid date!
+confirmDeleteIncidence = Are sure to delete the incidence {0}?
