OrderDetails View e bindElement

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -68,6 +68,11 @@ oDataUpdateERROR = Update ERROR!
 oDataDeleteOK = Incidence {0} deleted.
 oDataDeleteERROR = error when deleting incident.
 
-# Validade Data
+# Validate Data
 errorCreationDateValue = Invalid date!
 confirmDeleteIncidence = Are sure to delete the incidence {0}?
+
+#Order Details
+orderDate = Order Date
+shipName = Ship Name
+customerID = Customer ID
