--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -76,3 +76,6 @@ confirmDeleteIncidence = Are sure to delete the incidence {0}?
 orderDate = Order Date
 shipName = Ship Name
 customerID = Customer ID
+
+# Signature
+clear = Clear Signature
