Implementando view para utilizar a função factory

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -76,6 +76,7 @@ confirmDeleteIncidence = Are sure to delete the incidence {0}?
 orderDate = Order Date
 shipName = Ship Name
 customerID = Customer ID
+orderProducts = Order Products
 
 # Signature
 clear = Clear Signature
