Factory - Implementando lógica no controlador

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -77,6 +77,7 @@ orderDate = Order Date
 shipName = Ship Name
 customerID = Customer ID
 orderProducts = Order Products
+availableStock = Available Stock
 
 # Signature
 clear = Clear Signature
