--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -76,6 +76,8 @@ confirmDeleteIncidence = Are sure to delete the incidence {0}?
 orderDate = Order Date
 shipName = Ship Name
 customerID = Customer ID
+orderProducts = Order Products
+availableStock = Available Stock
 
 # Signature
 clear = Clear Signature
