OData Imagem - Signature CREATE

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -80,4 +80,8 @@ orderProducts = Order Products
 availableStock = Available Stock
 
 # Signature
-clear = Clear Signature
+clear = Clear
+saveSignature = Save Signature
+fillSignature = Please Sign the Order
+signatureSaved = Signature Saved
+signatureNotSaved = Signature NOT Saved!
